Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28958

Crash when opening "Git Branches" view's remote branch context menu

    XMLWordPrintable

Details

    • Windows
    • 0f3f5fb4d (master)

    Description

      When I right click on a remote branch in the Git Branch menu while the progress bar shows activity, I get a crash. I can only reproduce this with an Msvc Release build. I cannot reproduce this with a debug build or any MinGW builds.

      Backtrace
      .  0  Id: 1f28.2d9c Suspend: 1 Teb: 00000082`45802000 Unfrozen
      Child-SP          RetAddr           Call Site
      00000082`45af51e0 00007ff8`993e5db2 Qt6Gui!operator<<+0x269
      00000082`45af5230 00007ff8`9206314e Qt6Gui!QAction::setText+0x22
      00000082`45af5280 00007ff8`92064654 Git!<lambda_41f49bfe7a0450608e91971c95547a48>::operator()(void)+0x1be [C:\Users\alportal\dev\qt-creator-qt6\src\plugins\git\branchview.cpp @ 279]
      (Inline Function) --------`-------- Git!std::_Func_class<void>::operator()+0xf [C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.29.30133\include\functional @ 869]
      (Inline Function) --------`-------- Git!Git::Internal::BranchView::onFastForwardMerge::__l2::<lambda_1cc81d74c9553edb529d51682e59e9a8>::operator()+0x36 [C:\Users\alportal\dev\qt-creator-qt6\src\plugins\git\branchview.cpp @ 563]
      (Inline Function) --------`-------- Git!std::invoke+0x36 [C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.29.30133\include\type_traits @ 1524]
      (Inline Function) --------`-------- Git!std::_Invoker_ret<void,1>::_Call+0x36 [C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.29.30133\include\functional @ 651]
      00000082`45af5320 00007ff8`9a70018c Git!std::_Func_impl_no_alloc<<lambda_1cc81d74c9553edb529d51682e59e9a8>,void>::_Do_call(void)+0x44 [C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.29.30133\include\functional @ 823]
      (Inline Function) --------`-------- Utils!std::_Func_class<void>::operator()+0xf [C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.29.30133\include\functional @ 869]
      (Inline Function) --------`-------- Utils!std::invoke+0xf [C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.29.30133\include\type_traits @ 1524]
      00000082`45af5350 00007ff8`9a7132d8 Utils!Utils::invokeHandler<std::function<void __cdecl(class Utils::TaskContainer * container = 0x0000026b`79f3a330, class std::function<void __cdecl(void)> * handler = 0x0000026b`79f3a390 {...})+0x3c [C:\Users\alportal\dev\qt-creator-qt6\src\libs\utils\tasktree.cpp @ 500]
      00000082`45af5380 00007ff8`9a70c291 Utils!Utils::TaskContainer::invokeEndHandler(void)+0x38 [C:\Users\alportal\dev\qt-creator-qt6\src\libs\utils\tasktree.cpp @ 723]
      00000082`45af53b0 00007ff8`9a70b712 Utils!Utils::TaskContainer::continueStart(Utils::Tasking::TaskAction startAction = <Value unavailable error>, int nextChild = <Value unavailable error>)+0x61 [C:\Users\alportal\dev\qt-creator-qt6\src\libs\utils\tasktree.cpp @ 611]
      00000082`45af53e0 00007ff8`99e80746 Utils!Utils::TaskContainer::childDone(bool success = <Value unavailable error>)+0xd2 [C:\Users\alportal\dev\qt-creator-qt6\src\libs\utils\tasktree.cpp @ 669]
      00000082`45af5410 00007ff8`99e82bb4 Qt6Core!QObject::qt_static_metacall+0x18c6
      00000082`45af5560 00007ff8`9a3dcdb0 Qt6Core!QMetaObject::activate+0x84
      00000082`45af5590 00007ff8`99e80746 Utils!Utils::Tasking::TaskInterface::done(bool _t1 = true)+0x30 [C:\Users\alportal\dev\{d5ef10eb-09eb-45f7-9832-6adbaa8bc8df}\src\libs\utils\Utils_autogen\EWIEGA46WW\moc_tasktree.cpp @ 146]
      00000082`45af55d0 00007ff8`99e82bb4 Qt6Core!QObject::qt_static_metacall+0x18c6
      00000082`45af5720 00007ff8`9a6cc84e Qt6Core!QMetaObject::activate+0x84
      (Inline Function) --------`-------- Utils!Utils::Internal::QtcProcessPrivate::emitGuardedSignal+0x1b [C:\Users\alportal\dev\qt-creator-qt6\src\libs\utils\qtcprocess.cpp @ 791]
      00000082`45af5750 00007ff8`99e80746 Utils!Utils::Internal::QtcProcessPrivate::handleDone(class Utils::ProcessResultData * data = 0x00000082`45af5b20)+0x16e [C:\Users\alportal\dev\qt-creator-qt6\src\libs\utils\qtcprocess.cpp @ 2080]
      00000082`45af5780 00007ff8`99e82bb4 Qt6Core!QObject::qt_static_metacall+0x18c6
      00000082`45af58d0 00007ff8`9a3dcd4a Qt6Core!QMetaObject::activate+0x84
      00000082`45af5900 00007ff8`99e80746 Utils!Utils::ProcessInterface::done(class Utils::ProcessResultData * _t1 = <Value unavailable error>)+0x2a [C:\Users\alportal\dev\{d5ef10eb-09eb-45f7-9832-6adbaa8bc8df}\src\libs\utils\Utils_autogen\EWIEGA46WW\moc_processinterface.cpp @ 215]
      00000082`45af5940 00007ff8`99e82bb4 Qt6Core!QObject::qt_static_metacall+0x18c6
      00000082`45af5a90 00007ff8`9a3dccaa Qt6Core!QMetaObject::activate+0x84
      00000082`45af5ac0 00007ff8`9a628c36 Utils!Utils::Internal::CallerHandle::done(class Utils::ProcessResultData * _t1 = <Value unavailable error>)+0x2a [C:\Users\alportal\dev\{d5ef10eb-09eb-45f7-9832-6adbaa8bc8df}\src\libs\utils\Utils_autogen\EWIEGA46WW\moc_launchersocket.cpp @ 239]
      00000082`45af5b00 00007ff8`9a62894f Utils!Utils::Internal::CallerHandle::handleDone(class Utils::Internal::LauncherDoneSignal * launcherSignal = 0x0000026b`7a0acc20)+0x76 [C:\Users\alportal\dev\qt-creator-qt6\src\libs\utils\launchersocket.cpp @ 154]
      00000082`45af5b60 00007ff8`99e8a91b Utils!Utils::Internal::CallerHandle::flushFor(Utils::Internal::CallerHandle::SignalType signalType = NoSignal (0n0))+0x29f [C:\Users\alportal\dev\qt-creator-qt6\src\libs\utils\launchersocket.cpp @ 120]
      00000082`45af5c50 00007ff8`99e88d8d Qt6Core!QMetaCallEvent::placeMetaCall+0x3b
      *** ERROR: Symbol file could not be found.  Defaulted to export symbols for C:\Qt\6.4.3\msvc2019_64\bin\Qt6Widgets.dll - 
      00000082`45af5c90 00007ff8`99810f2e Qt6Core!QObject::event+0x18d
      00000082`45af5eb0 00007ff8`99810001 Qt6Widgets!QApplicationPrivate::notify_helper+0x10e
      00000082`45af5ee0 00007ff8`99e450c5 Qt6Widgets!QApplication::notify+0x1891
      00000082`45af6390 00007ff8`99e47965 Qt6Core!QCoreApplication::notifyInternal2+0xc5
      00000082`45af6400 00007ff8`993b0cdf Qt6Core!QCoreApplicationPrivate::sendPostedEvents+0x225
      00000082`45af64f0 00007ff8`99fa1be0 Qt6Gui!QWindowsGuiEventDispatcher::sendPostedEvents+0xf
      00000082`45af6520 00007ff8`993b0cb9 Qt6Core!QEventDispatcherWin32::processEvents+0x90
      00000082`45af9680 00007ff8`99e4ab84 Qt6Gui!QWindowsGuiEventDispatcher::processEvents+0x19
      00000082`45af96b0 00007ff8`9999b3af Qt6Core!QEventLoop::exec+0x194
      00000082`45af9750 00007ff8`9999b1eb Qt6Widgets!QMenu::exec+0x17f
      00000082`45af97e0 00007ff8`9206ad46 Qt6Widgets!QMenu::exec+0x1b
      00000082`45af9850 00007ff8`99e80746 Git!Git::Internal::BranchView::slotCustomContextMenu(class QPoint * point = 0x00000082`45afa938)+0x14b6 [C:\Users\alportal\dev\qt-creator-qt6\src\plugins\git\branchview.cpp @ 301]
      00000082`45af9b20 00007ff8`99e82bb4 Qt6Core!QObject::qt_static_metacall+0x18c6
      00000082`45af9c70 00007ff8`9984deea Qt6Core!QMetaObject::activate+0x84
      00000082`45af9ca0 00007ff8`99850183 Qt6Widgets!QWidget::customContextMenuRequested+0x2a
      00000082`45af9ce0 00007ff8`998dcac0 Qt6Widgets!QWidget::event+0x673
      00000082`45af9dc0 00007ff8`99a8990b Qt6Widgets!QFrame::event+0x30
      00000082`45af9df0 00007ff8`99e47c97 Qt6Widgets!QAbstractItemView::viewportEvent+0x3ab
      00000082`45af9f50 00007ff8`99810f13 Qt6Core!QCoreApplicationPrivate::sendThroughObjectEventFilters+0xd7
      00000082`45af9fb0 00007ff8`9980f700 Qt6Widgets!QApplicationPrivate::notify_helper+0xf3
      00000082`45af9fe0 00007ff8`99e450c5 Qt6Widgets!QApplication::notify+0xf90
      00000082`45afa490 00007ff8`9986ef31 Qt6Core!QCoreApplication::notifyInternal2+0xc5
      00000082`45afa500 00007ff8`9986c673 Qt6Widgets!QWidgetRepaintManager::updateStaticContentsSize+0x34f1
      00000082`45afaa00 00007ff8`99810f2e Qt6Widgets!QWidgetRepaintManager::updateStaticContentsSize+0xc33
      00000082`45afab10 00007ff8`99810001 Qt6Widgets!QApplicationPrivate::notify_helper+0x10e
      00000082`45afab40 00007ff8`99e450c5 Qt6Widgets!QApplication::notify+0x1891
      00000082`45afaff0 00007ff8`991192c9 Qt6Core!QCoreApplication::notifyInternal2+0xc5
      00000082`45afb060 00007ff8`99166e58 Qt6Gui!QGuiApplicationPrivate::processMouseEvent+0x799
      00000082`45afb580 00007ff8`99fa1be0 Qt6Gui!QWindowSystemInterface::sendWindowSystemEvents+0xe8
      00000082`45afb5b0 00007ff8`993b0cb9 Qt6Core!QEventDispatcherWin32::processEvents+0x90
      00000082`45afe710 00007ff8`99e4ab84 Qt6Gui!QWindowsGuiEventDispatcher::processEvents+0x19
      00000082`45afe740 00007ff8`99e42f4d Qt6Core!QEventLoop::exec+0x194
      *** WARNING: Unable to verify checksum for qtcreator.exe
      00000082`45afe7e0 00007ff6`95c3a211 Qt6Core!QCoreApplication::exec+0x15d
      00000082`45afe840 00007ff6`95c413d7 qtcreator!main(int argc = <Value unavailable error>, char ** argv = <Value unavailable error>)+0x3111 [C:\Users\alportal\dev\qt-creator-qt6\src\app\main.cpp @ 794]
      [...]
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            orgads Orgad Shaneh
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes