Git: Fix crash when menu is closed before fast-forward check result

Fixes: QTCREATORBUG-28958
Change-Id: Ic3bfde2f355fdb3d44b0614e9ba176ff550d97c8
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>